--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
 <html>
-  <h1> hello world </h1>
+  <h1> Tugas Computer Vision Deteksi Wajah</h1>
+  <p> Gambar foto asli
+    <img src = "foto_asli.jpg">
+  </p>
+  <h3> Percobaan dengan mengurangi brightness/kecerahan</h3>
+  <ol> 
+    <li><b>percobaan 1</b>
+      <img src = "test1.jpg"></br>
+       <p> hasil
+          <img src = "hasil1.jpg">
+         Wajah dan mata masih terdeteksi
+      </p>
+    </li>
+  
+    
+    
+  
 </html>
