--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   </p>
   <h3> Percobaan dengan mengurangi brightness/kecerahan</h3>
   <ol> 
-    <li><b>percobaan 1</b>
+    <li><b>percobaan 1</b></br>
       <img src = "test1.jpg"></br>
        <p> hasil
-          <img src = "hasil1.jpg">
+         <img src = "hasil1.png"></br>
          Wajah dan mata masih terdeteksi
       </p>
     </li>
