--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
   <h1> Tugas Computer Vision Deteksi Wajah</h1>
   <p> Gambar foto asli
-    <img src = "foto_asli.jpg">
+    <img src = "foto_asli.JPG">
   </p>
   <h3> Percobaan dengan mengurangi brightness/kecerahan</h3>
   <ol> 
     <li><b>percobaan 1</b></br>
-      <img src = "test1.jpg"></br>
+      <img src = "test1.JPG"></br>
        <p> hasil
-         <img src = "hasil1.png"></br>
+         <img src = "hasil1.PNG"></br>
          Wajah dan mata masih terdeteksi
       </p>
     </li>
