--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <html>
   <h1> Tugas Computer Vision Deteksi Wajah</h1>
-  <p> Gambar foto asli
+  <p> Gambar foto asli </br>
     <img src = "foto_asli.JPG">
   </p>
   <h3> Percobaan dengan mengurangi brightness/kecerahan</h3>
   <ol> 
     <li><b>percobaan 1</b></br>
-      <img src = "test1.JPG"></br>
+      <img src = "test2.JPG"></br>
        <p> hasil
          <img src = "hasil1.PNG"></br>
          Wajah dan mata masih terdeteksi
       </p>
     </li>
+    <li> percobaan 2
+      </br><img src = "test1.JPG"></br>
+      hasil</br>
+      <img src = "hasil.PNG"></br>
+       Hanya wajah yang bisa terdeteksi sedangkan mata tidak
+    </li>
+  <li><b>percobaan 3</b></br>
+      <img src = "test5.JPG"></br>
+       <p> hasil
+         <img src = "hasil3.PNG"></br>
+         Wajah dan mata masih terdeteksi
+      </p>
+    </li>
+</ol>
+
   
     
     
