--- a/index.html
+++ b/index.html
@@ -3,29 +3,26 @@
   <p> Gambar foto asli </br>
     <img src = "foto_asli.JPG">
   </p>
-  <h3> Percobaan dengan mengurangi brightness/kecerahan</h3>
-  <ol> 
-    <li><b>percobaan 1</b></br>
+<h3> Percobaan dengan mengurangi brightness/kecerahan</h3>
+    <p><b>percobaan 1</b></br>
       <img src = "test2.JPG"></br>
-       <p> hasil
+hasil</br>
          <img src = "hasil1.PNG"></br>
          Wajah dan mata masih terdeteksi
       </p>
-    </li>
-    <li> percobaan 2
+<p><b> percobaan 2 </b></br>
       </br><img src = "test1.JPG"></br>
       hasil</br>
-      <img src = "hasil.PNG"></br>
+      <img src = "hasi2.PNG"></br>
        Hanya wajah yang bisa terdeteksi sedangkan mata tidak
-    </li>
-  <li><b>percobaan 3</b></br>
+</p>
+</br>
+<b>percobaan 3</b></br>
       <img src = "test5.JPG"></br>
-       <p> hasil
+<p> hasil</br>
          <img src = "hasil3.PNG"></br>
          Wajah dan mata masih terdeteksi
       </p>
-    </li>
-</ol>
 
   
     
