--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   </p>
 <h3> Percobaan dengan mengurangi brightness/kecerahan</h3>
     <p><b>percobaan 1</b></br>
-      <img src = "test2.JPG"></br>
+      <img src = "test2.jpg"></br>
 hasil</br>
          <img src = "hasil1.PNG"></br>
          Wajah dan mata masih terdeteksi
       </p>
 <p><b> percobaan 2 </b></br>
-      </br><img src = "test1.JPG"></br>
+      </br><img src = "test1.jpg"></br>
       hasil</br>
       <img src = "hasi2.PNG"></br>
        Hanya wajah yang bisa terdeteksi sedangkan mata tidak
 </p>
 </br>
 <b>percobaan 3</b></br>
-      <img src = "test5.JPG"></br>
+      <img src = "test5.jpg"></br>
 <p> hasil</br>
          <img src = "hasil3.PNG"></br>
          Wajah dan mata masih terdeteksi
