--- a/index.html
+++ b/index.html
@@ -1,29 +1,52 @@
 <html>
+  <body>
   <h1> Tugas Computer Vision Deteksi Wajah</h1>
   <p> Gambar foto asli </br>
     <img src = "foto_asli.JPG">
   </p>
 <h3> Percobaan dengan mengurangi brightness/kecerahan</h3>
-    <p><b>percobaan 1</b></br>
+<p><b>percobaan 1</b></br>menggunakan foto dengan brightness seperti foto berikut</br>
       <img src = "test2.jpg"></br>
        hasil</br>
          <img src = "hasil1.PNG"></br>
          Wajah dan mata masih terdeteksi
       </p>
-<p><b> percobaan 2 </b></br>
+<p><b> percobaan 2 </b></br>menggunakan foto dengan brightness seperti foto berikut</br>
       </br><img src = "test1.jpg"></br>
       hasil</br>
-      <img src = "hasi2.PNG"></br>
+      <img src = "hasil2.PNG"></br>
        Hanya wajah yang bisa terdeteksi sedangkan mata tidak
 </p>
-<p>
-<b>percobaan 3</b></br>
+<p style = "border-style : dashed">
+  <b>percobaan 3</b></br>menggunakan foto dengan brightness seperti foto berikut</br>
  <img src = "test5.jpg"></br>
 hasil</br>
          <img src = "hasil3.PNG"></br>
-         Wajah dan mata masih terdeteksi
+         Wajah dan mata sudah tidak terdeteksi
       </p>
+<p> Kode Program</br>
+import cv2
+import numpy as np
+face_cascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')
+eye_cascade = cv2.CascadeClassifier('haarcascade_eye.xml')
 
+img = cv2.imread('test5.jpg')
+gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)
+faces = face_cascade.detectMultiScale(gray, 1.3,8)
+for (x,y,w,h) in faces:
+    img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,0,0),2)
+    roi_gray = gray[y:y+h, x:x+w]
+    roi_color = img[y:y+h, x:x+w]
+    eyes = eye_cascade.detectMultiScale(roi_gray)
+    for (ex,ey,ew,eh) in eyes:
+        cv2.rectangle(roi_color,(ex,ey),(ex+ew,ey+eh),(0,255,0),2)
+
+cv2.imshow('img',img)
+cv2.waitKey(0)
+cv2.destroyAllWindows()
+</p>
+
+</body>
   
     
     
