--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       <img src = "hasil2.PNG"></br>
        Hanya wajah yang bisa terdeteksi sedangkan mata tidak
 </p>
-<p style = "border-style : dashed">
+<p>
   <b>percobaan 3</b></br>menggunakan foto dengan brightness seperti foto berikut</br>
  <img src = "test5.jpg"></br>
-hasil</br>
+hasil</br></br>
          <img src = "hasil3.PNG"></br>
          Wajah dan mata sudah tidak terdeteksi
       </p>
-<p> Kode Program</br>
+<p><b> Kode Program</b></br>
 import cv2
 import numpy as np
 face_cascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')
