--- a/index.html
+++ b/index.html
@@ -1,51 +1,20 @@
 <html>
   <body>
-  <h1> Tugas Computer Vision Deteksi Wajah</h1>
-  <p> Gambar foto asli </br>
-    <img src = "foto_asli.JPG">
-  </p>
-<h3> Percobaan dengan mengurangi brightness/kecerahan</h3>
-<p><b>percobaan 1</b></br>menggunakan foto dengan brightness seperti foto berikut</br>
-      <img src = "test2.jpg"></br>
-       hasil</br>
-         <img src = "hasil1.PNG"></br>
-         Wajah dan mata masih terdeteksi
-      </p>
-<p><b> percobaan 2 </b></br>menggunakan foto dengan brightness seperti foto berikut</br>
-      </br><img src = "test1.jpg"></br>
-      hasil</br>
-      <img src = "hasil2.PNG"></br>
-       Hanya wajah yang bisa terdeteksi sedangkan mata tidak
-</p>
-<p>
-  <b>percobaan 3</b></br>menggunakan foto dengan brightness seperti foto berikut</br>
- <img src = "test5.jpg"></br>
-hasil</br></br>
-         <img src = "hasil3.PNG"></br>
-         Wajah dan mata sudah tidak terdeteksi
-      </p>
-<p style="border-style: dashed"><b> Kode Program</b></br>
-import cv2</br>
-import numpy as np </br>
-face_cascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')</br>
-eye_cascade = cv2.CascadeClassifier('haarcascade_eye.xml')</br>
-
-img = cv2.imread('test5.jpg')</br>
-gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)</br>
-faces = face_cascade.detectMultiScale(gray, 1.3,8)</br>
-for (x,y,w,h) in faces:</br>
-    &nbsp; &nbsp; img = cv2.rectangle(img,(x,y),(x+w,y+h),(255,0,0),2)</br>
-     &nbsp; &nbsp;roi_gray = gray[y:y+h, x:x+w]</br>
-     &nbsp; &nbsp;roi_color = img[y:y+h, x:x+w]</br>
-     &nbsp; &nbsp;eyes = eye_cascade.detectMultiScale(roi_gray)</br>
-     &nbsp; &nbsp;for (ex,ey,ew,eh) in eyes:</br>
-      &nbsp; &nbsp; &nbsp; &nbsp;cv2.rectangle(roi_color,(ex,ey),(ex+ew,ey+eh),(0,255,0),2)</br>
-
-cv2.imshow('img',img)</br>
-cv2.waitKey(0)</br>
-
-cv2.destroyAllWindows()</br>
-</p>
+  <h1> Laporan Praktikum Sistem Embedded dan Tugas BIOMETRIC</h1>
+ <li type = '1'>
+   <ol>
+     <a href= '#'>Tugas Biometric</a>
+   </ol>
+   <ol>
+     Laporan Praktikum Sistem Embedded
+     <ul> Modul 1</ul>
+     <ul> Modul 2</ul>
+     <ul> Modul 3</ul>
+     <ul> Modul 4</ul>
+     
+   </ol>
+ </li>
+  
 
 </body>
   
