--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <html>
   <body>
   <h1> Laporan Praktikum Sistem Embedded dan Tugas BIOMETRIC</h1>
- <li type = '1'>
-   <ol>
+ <ol type = '1'>
+   <li>
      <a href= '#'>Tugas Biometric</a>
-   </ol>
-   <ol>
-     Laporan Praktikum Sistem Embedded
-     <ul> Modul 1</ul>
-     <ul> Modul 2</ul>
-     <ul> Modul 3</ul>
-     <ul> Modul 4</ul>
-     
-   </ol>
- </li>
+   </li>
+   <li>
+     <a href = "#"> Laporan Praktikum Sistem Embedded</a>
+   </li>
+ </ol>
   
 
 </body>
