--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <body>
   <h1> Laporan Praktikum Sistem Embedded dan Tugas BIOMETRIC</h1>
+    <p> NAMA : DZIKRINA HANUM SALSABIELA</p>
+    <p> NIM : L200160091</p>
  <ol type = '1'>
    <li>
      <a href= '#'>Tugas Biometric</a>
