--- a/modul1.html
+++ b/modul1.html
@@ -1,6 +1,76 @@
 <html>
 <body>
 <h1> MODUL 1 </h1>
+<h2> Input dan Output Data Digital</h2>
+  <p> <b>Peralatan yang diperlukan :</b>
+  - Board arduino uno
+  - LED
+  - Resistor
+  -Breadboard
+ </p>
+  
+  <p><b> Tugas :</b> 1. Memodifikasi program agar dalam 1 detik,LED dalam keadaan ON selama 2/3 detik dan OFF selama 1/3 detik 
+    2. Menambah 4 buah LED
+    3. Membuat animasi sederhana dengan 5 buah lampu LED</p>
+  
+  <hr>
+  
+  
+  <h4>Kode Program</h4>
+  <p border = "1">
+    nt led1= 13;
+int led2 = 12;
+int led3 = 11;
+int led4 = 10;
+int led5 = 9;
+void setup() {
+  // put your setup code here, to run once:
+  pinMode(led1,OUTPUT);
+  pinMode(led2,OUTPUT);
+  pinMode(led3,OUTPUT);
+  pinMode(led4,OUTPUT);
+  pinMode(led5,OUTPUT);
+
+}
+
+void loop() {
+  // put your main code here, to run repeatedly:
+  digitalWrite(led1,HIGH);
+  delay(500);
+  digitalWrite(led1,LOW);
+  delay(500);
+  digitalWrite(led2,HIGH);
+  delay(500);
+  digitalWrite(led2,LOW);
+  delay(500);
+  digitalWrite(led3,HIGH);
+  delay(500);
+  digitalWrite(led3,LOW);
+  delay(500);
+  digitalWrite(led4,HIGH);
+  delay(500);
+  digitalWrite(led4,LOW);
+  delay(500);
+  digitalWrite(led5,HIGH);
+  delay(500);
+  digitalWrite(led5,LOW);
+  delay(500);
+  digitalWrite(led1,HIGH);
+  digitalWrite(led2,HIGH);
+  digitalWrite(led3,HIGH);
+  digitalWrite(led4,HIGH);
+  digitalWrite(led5,HIGH); 
+  delay(800);
+  digitalWrite(led1,LOW);
+  digitalWrite(led2,LOW);
+  digitalWrite(led3,LOW);
+  digitalWrite(led4,LOW);
+  digitalWrite(led5,LOW); 
+
+} 
+  </p>
+  
+  
 
 
 </body>
