--- a/modul1.html
+++ b/modul1.html
@@ -2,15 +2,15 @@
 <body>
 <h1> MODUL 1 </h1>
 <h2> Input dan Output Data Digital</h2>
-  <p> <b>Peralatan yang diperlukan :</b>
-  - Board arduino uno
-  - LED
-  - Resistor
+  <p> <b>Peralatan yang diperlukan :</b></br>
+  - Board arduino uno</br>
+  - LED</br>
+  - Resistor</br>
   -Breadboard
  </p>
   
-  <p><b> Tugas :</b> 1. Memodifikasi program agar dalam 1 detik,LED dalam keadaan ON selama 2/3 detik dan OFF selama 1/3 detik 
-    2. Menambah 4 buah LED
+  <p><b> Tugas :</b> 1. Memodifikasi program agar dalam 1 detik,LED dalam keadaan ON selama 2/3 detik dan OFF selama 1/3 detik </br>
+    2. Menambah 4 buah LED</br>
     3. Membuat animasi sederhana dengan 5 buah lampu LED</p>
   
   <hr>
@@ -18,54 +18,54 @@
   
   <h4>Kode Program</h4>
   <p border = "1">
-    nt led1= 13;
-int led2 = 12;
-int led3 = 11;
-int led4 = 10;
-int led5 = 9;
-void setup() {
-  // put your setup code here, to run once:
-  pinMode(led1,OUTPUT);
-  pinMode(led2,OUTPUT);
-  pinMode(led3,OUTPUT);
-  pinMode(led4,OUTPUT);
-  pinMode(led5,OUTPUT);
+    nt led1= 13;</br>
+int led2 = 12;</br>
+int led3 = 11;</br>
+int led4 = 10;</br>
+int led5 = 9;</br>
+void setup() {</br>
+  // put your setup code here, to run once:</br>
+  pinMode(led1,OUTPUT);</br>
+  pinMode(led2,OUTPUT);</br>
+  pinMode(led3,OUTPUT);</br>
+  pinMode(led4,OUTPUT);</br>
+  pinMode(led5,OUTPUT);</br>
 
 }
-
-void loop() {
-  // put your main code here, to run repeatedly:
-  digitalWrite(led1,HIGH);
-  delay(500);
-  digitalWrite(led1,LOW);
-  delay(500);
-  digitalWrite(led2,HIGH);
-  delay(500);
-  digitalWrite(led2,LOW);
-  delay(500);
-  digitalWrite(led3,HIGH);
-  delay(500);
-  digitalWrite(led3,LOW);
-  delay(500);
-  digitalWrite(led4,HIGH);
-  delay(500);
-  digitalWrite(led4,LOW);
-  delay(500);
-  digitalWrite(led5,HIGH);
-  delay(500);
-  digitalWrite(led5,LOW);
-  delay(500);
-  digitalWrite(led1,HIGH);
-  digitalWrite(led2,HIGH);
-  digitalWrite(led3,HIGH);
-  digitalWrite(led4,HIGH);
-  digitalWrite(led5,HIGH); 
-  delay(800);
-  digitalWrite(led1,LOW);
-  digitalWrite(led2,LOW);
-  digitalWrite(led3,LOW);
-  digitalWrite(led4,LOW);
-  digitalWrite(led5,LOW); 
+</br>
+void loop() {</br>
+  // put your main code here, to run repeatedly:</br>
+  digitalWrite(led1,HIGH);</br>
+  delay(500);</br>
+  digitalWrite(led1,LOW);</br>
+  delay(500);</br>
+  digitalWrite(led2,HIGH);</br>
+  delay(500);</br>
+  digitalWrite(led2,LOW);</br>
+  delay(500);</br>
+  digitalWrite(led3,HIGH);</br>
+  delay(500);</br>
+  digitalWrite(led3,LOW);</br>
+  delay(500);</br>
+  digitalWrite(led4,HIGH);</br>
+  delay(500);</br>
+  digitalWrite(led4,LOW);</br>
+  delay(500);</br>
+  digitalWrite(led5,HIGH);</br>
+  delay(500);</br>
+  digitalWrite(led5,LOW);</br>
+  delay(500);</br>
+  digitalWrite(led1,HIGH);</br>
+  digitalWrite(led2,HIGH);</br>
+  digitalWrite(led3,HIGH);</br>
+  digitalWrite(led4,HIGH);</br>
+  digitalWrite(led5,HIGH); </br>
+  delay(800);</br>
+  digitalWrite(led1,LOW);</br>
+  digitalWrite(led2,LOW);</br>
+  digitalWrite(led3,LOW);</br>
+  digitalWrite(led4,LOW);</br>
+  digitalWrite(led5,LOW); </br>
 
 } 
   </p>
