--- a/modul1.html
+++ b/modul1.html
@@ -9,11 +9,12 @@
   -Breadboard
  </p>
   
-  <p><b> Tugas :</b> 1. Memodifikasi program agar dalam 1 detik,LED dalam keadaan ON selama 2/3 detik dan OFF selama 1/3 detik </br>
+<p><b> Tugas :</b></br> 1. Memodifikasi program agar dalam 1 detik,LED dalam keadaan ON selama 2/3 detik dan OFF selama 1/3 detik </br>
     2. Menambah 4 buah LED</br>
     3. Membuat animasi sederhana dengan 5 buah lampu LED</p>
   
   <hr>
+<img src = "aku.jpg" style = "height: 500px; width: 500px;"/>
   
   
   <h4>Kode Program</h4>
