--- a/modul1.html
+++ b/modul1.html
@@ -18,7 +18,7 @@
   
   
   <h4>Kode Program</h4>
-  <p border = "1">
+  <p style = "border-style : solid;">
     nt led1= 13;</br>
 int led2 = 12;</br>
 int led3 = 11;</br>
