--- a/modul1.html
+++ b/modul1.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-<h1> MODUL 1 </h1>
+<h1> LAPORAN PRAKTIKUM SISTEM EMBEDDED</h1>
+  <h2>MODUL 1</h2>
 <h2> Input dan Output Data Digital</h2>
   <p> <b>Peralatan yang diperlukan :</b></br>
   - Board arduino uno</br>
@@ -14,7 +15,7 @@
     3. Membuat animasi sederhana dengan 5 buah lampu LED</p>
   
   <hr>
-<img src = "aku.jpg" style = "height: 500px; width: 500px;"/>
+<img src = "aku.jpg" height="42" width="42">
   
   
   <h4>Kode Program</h4>
