--- a/modul1.html
+++ b/modul1.html
@@ -15,7 +15,7 @@
     3. Membuat animasi sederhana dengan 5 buah lampu LED</p>
   
   <hr>
-<img src = "aku.jpg" height="42" width="42">
+<img src = "oke.jpg" height="250px" width="250px">
   
   
   <h4>Kode Program</h4>
