--- a/modul1.html
+++ b/modul1.html
@@ -15,7 +15,7 @@
     3. Membuat animasi sederhana dengan 5 buah lampu LED</p>
   
   <hr>
-<img src = "oke.jpg" height="250px" width="250px">
+<img src = "oke.jpg" style = "height : 300px; width : 300px;">
   
   
   <h4>Kode Program</h4>
