--- a/modul1.html
+++ b/modul1.html
@@ -2,9 +2,9 @@
 <body>
 <h1 style = "text-align : center;"> LAPORAN PRAKTIKUM SISTEM EMBEDDED</h1>
   <h2 style = "text-align : center;" >MODUL 1</h2>
-<h3 style = "text-align : center;"> Input dan Output Data Digital</h3>
-  <p> NAMA : DZIKRINA HANUM SALSABIELA</p>
-  <p> NIM : L200160091</p>
+<h3 style = "text-align : center;"> Input dan Output Data Digital</h3><hr>
+  <p><b> NAMA : DZIKRINA HANUM SALSABIELA</b></p>
+  <p><b> NIM : L200160091</p></b><hr>
   <p> <b>Peralatan yang diperlukan :</b></br>
   - Board arduino uno</br>
   - LED</br>
