--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <a href= '#'>Tugas Biometric</a>
    </li>
    <li>
-     <a href = "#"> Laporan Praktikum Sistem Embedded</a>
+     <a href = "https://l200160091.github.io/modul1.html"> Laporan Praktikum Sistem Embedded</a>
    </li>
  </ol>
   
