--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  </head>
   <body>
+    <div class = "jumbotron">
+        LAPORAN SISTEM EMBEDDED dan TUGAS BIOMETRIC
+        <hr>
+      <h3> Dzikrina Hanum Salsabiela</h3>
+      <h4> L200160091</h4>
+    <div>
   <h1> Laporan Praktikum Sistem Embedded dan Tugas BIOMETRIC</h1>
     <p> NAMA : DZIKRINA HANUM SALSABIELA</p>
     <p> NIM : L200160091</p>
