--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <hr>
       <h3> Dzikrina Hanum Salsabiela</h3>
       <h4> L200160091</h4>
-    <div>
+    </div>
   <h1> Laporan Praktikum Sistem Embedded dan Tugas BIOMETRIC</h1>
     <p> NAMA : DZIKRINA HANUM SALSABIELA</p>
     <p> NIM : L200160091</p>
