--- a/index.html
+++ b/index.html
@@ -7,20 +7,17 @@
   </head>
   <body>
     <div class = "jumbotron">
-        LAPORAN SISTEM EMBEDDED dan TUGAS BIOMETRIC
+      <h1>LAPORAN SISTEM EMBEDDED dan TUGAS BIOMETRIC</h1>
         <hr>
       <h3> Dzikrina Hanum Salsabiela</h3>
       <h4> L200160091</h4>
     </div>
-  <h1> Laporan Praktikum Sistem Embedded dan Tugas BIOMETRIC</h1>
-    <p> NAMA : DZIKRINA HANUM SALSABIELA</p>
-    <p> NIM : L200160091</p>
  <ol type = '1'>
    <li>
-     <a href= '#'>Tugas Biometric</a>
+     <a href= '#' class = "btn btn-primary btn-lg">Tugas Biometric</a>
    </li>
    <li>
-     <a href = "https://l200160091.github.io/modul1.html"> Laporan Praktikum Sistem Embedded</a>
+     <a href = "https://l200160091.github.io/modul1.html" class = "btn btn-primary btn-lg"> Laporan Praktikum Sistem Embedded</a>
    </li>
  </ol>
   
