--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div class = "jumbotron">
+    <div class = "jumbotron" style = "background-color : #9999ff">
       <h1>LAPORAN SISTEM EMBEDDED dan TUGAS BIOMETRIC</h1>
         <hr>
       <h3> Dzikrina Hanum Salsabiela</h3>
       <h4> L200160091</h4>
-    </div>
- <ol type = '1'>
-   <li>
+      <div class = "row">
+   <div class = "col-6">
      <a href= '#' class = "btn btn-primary btn-lg">Tugas Biometric</a>
-   </li>
-   <li>
+    </div>
+   <div class = "col-6>
      <a href = "https://l200160091.github.io/modul1.html" class = "btn btn-primary btn-lg"> Laporan Praktikum Sistem Embedded</a>
-   </li>
- </ol>
+  </div>
+ </div>
+    </div>
+ 
+                                                                                         
   
 
 </body>
