--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <h4> L200160091</h4>
       <hr>
       
-               <div class="card">
+               <div class="card" style="width:400px">
                     <div class="card-header">BIOMETRIC</div>
                     <div class="card-body"><a href= '#' class = "btn btn-primary btn-lg">Tugas Biometric</a></div> 
                     <div class="card-footer">2019</div>
                 </div>
                 &nbsp;&nbsp;
-                <div class="card">
+                <div class="card" style="width:400px">
                     <div class="card-header">PRAKTIKUM SISTEM EMBEDDED</div>
                     <div class="card-body"> <a href = "https://l200160091.github.io/modul1.html" class = "btn btn-primary btn-lg"> Modul 1</a></div> 
                     <div class="card-footer">2019</div>
