--- a/modul2.html
+++ b/modul2.html
@@ -19,7 +19,12 @@ LED ke-3 untuk range nilai antara 401-600, LED ke-4 untuk range nilai 601-800,da
 </p>
   
   <hr>
-<img src = "oke.jpg" style = "height : 300px; width : 300px;">
+<video width="320" height="240" controls>
+  <source src="VID_20190304_140453.mp4" type="video/mp4">
+  
+
+</video>
+
   
   
   <h4>Kode Program</h4>
