--- a/modul2.html
+++ b/modul2.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 <h1 style = "text-align : center;"> LAPORAN PRAKTIKUM SISTEM EMBEDDED</h1>
-  <h2 style = "text-align : center;" >MODUL 2/h2>
-<h3 style = "text-align : center;"> Input dan Output Analog>
+  <h2 style = "text-align : center;" >MODUL 2</h2>
+  <h3 style = "text-align : center;"> Input dan Output Analog</h3>
   <p><b> NAMA : DZIKRINA HANUM SALSABIELA</b></p>
   <p><b> NIM : L200160091</p></b><hr>
   <p> <b>Peralatan yang diperlukan :</b></br>
