Update and rename modul3 to modul3.html

--- a/modul3.html
+++ b/modul3.html
@@ -18,7 +18,7 @@ Menggunakan seven segment sebagai indikator nilai potensiometer
   
   <hr>
   <video>
-    <source src="movie.mp4" type="video/mp4">
+    <source src="VID_20190311_142837.mp4" type="video/mp4">
   </video>
   
   
