--- a/modul3.html
+++ b/modul3.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 <h1 style = "text-align : center;"> LAPORAN PRAKTIKUM SISTEM EMBEDDED</h1>
-  <h2 style = "text-align : center;" >MODUL 1</h2>
-<h3 style = "text-align : center;"> Input dan Output Data Digital</h3><hr>
+  <h2 style = "text-align : center;" >MODUL 3</h2>
+<h3 style = "text-align : center;"> DISPLAY 7-SEGMENT</h3><hr>
   <p><b> NAMA : DZIKRINA HANUM SALSABIELA</b></p>
   <p><b> NIM : L200160091</p></b><hr>
   <p> <b>Peralatan yang diperlukan :</b></br>
