--- a/modul3.html
+++ b/modul3.html
@@ -17,7 +17,7 @@ Menggunakan seven segment sebagai indikator nilai potensiometer
 </p>
   
   <hr>
-  <video width = "500px;">
+  <video width = "500px;" controls>
     <source src="VID_20190311_142837.mp4" type="video/mp4">
   </video>
   
