--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 &nbsp;&nbsp;
                 <div class="card" style="width:400px">
                     <div class="card-header">PRAKTIKUM SISTEM EMBEDDED</div>
-                    <div class="card-body"> <a href = "https://l200160091.github.io/modul1.html" class = "btn btn-primary btn-lg"> Modul 1</a></div> 
+                    <div class="card-body"> <a href = "https://l200160091.github.io/modul1.html" class = "btn btn-primary btn-lg"> Modul 1</a></div>&nbsp;&nbsp; 
+                  <div class="card-body"> <a href = "https://l200160091.github.io/modul2.html" class = "btn btn-primary btn-lg"> Modul 1</a></div> </br>
+                  <div class="card-body"> <a href = "https://l200160091.github.io/modul2.html" class = "btn btn-primary btn-lg"> Modul 1</a></div> 
                     <div class="card-footer">2019</div>
                 </div>
               
