--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="card-header">PRAKTIKUM SISTEM EMBEDDED</div>
                   
                     <div class="card-body"> <a href = "https://l200160091.github.io/modul1.html" class = "btn btn-primary btn-lg"> Modul 1</a> 
-                   <a href = "https://l200160091.github.io/modul2.html" class = "btn btn-primary btn-lg"> Modul 2</a> </br>
+                   <a href = "https://l200160091.github.io/modul2.html" class = "btn btn-primary btn-lg"> Modul 2</a> </br></br>
                    <a href = "https://l200160091.github.io/modul2.html" class = "btn btn-primary btn-lg"> Modul 3</a></div>
                     <div class="card-footer">2019</div>
                 </div>
