--- a/biometric.html
+++ b/biometric.html
@@ -7,6 +7,13 @@
 <hr>
 <h3>Dzikrina Hanum Salsabiela</h3>
 <h3>L200160091</h3>
+  <hr>
+  <h4> 1. Foto asli cetak sidik jari</h4>
+  <img src = "yes.jpg" style = "width : 500px;height : 500px;">
+  <br>
+  <h4> 2. Hasil dari tahap  poincare</h4>
+  <img src = "yes_poincare.gif" style = "width : 500px;height : 500px;">
+  
 
 
 </body>
