--- a/biometric.html
+++ b/biometric.html
@@ -3,16 +3,16 @@
 
 </head>
 <body>
-<h1 text-align = "center">Tugas Biometric Fingerprint Recognition</h1>
+<h1>Tugas Biometric Fingerprint Recognition</h1>
 <hr>
 <h3>Dzikrina Hanum Salsabiela</h3>
 <h3>L200160091</h3>
   <hr>
   <h4> 1. Foto asli cetak sidik jari</h4>
-  <img src = "yes.jpg" style = "width : 500px;height : 500px;">
+  <img src = "yes.jpg" style = "width : 300px;height : 300px;">
   <br>
   <h4> 2. Hasil dari tahap  poincare</h4>
-  <img src = "yes_poincare.gif" style = "width : 500px;height : 500px;">
+  <img src = "yes_poincare.gif" style = "width : 300px;height : 300px;">
   
 
 
