--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class = "col">
                <div class="card" style="width:400px">
                     <div class="card-header">BIOMETRIC</div>
-                    <div class="card-body"><a href= '#' class = "btn btn-primary btn-lg">Tugas Biometric</a></div> 
+                    <div class="card-body"><a href= 'L200160091.github.io/biometric.html' class = "btn btn-primary btn-lg">Tugas Biometric</a></div> 
                     <div class="card-footer">2019</div>
                 </div>
             </div>
