--- a/modul4.html
+++ b/modul4.html
@@ -18,7 +18,7 @@ Menggunakan 7-segment sebagai indikator intensitas cahaya sederhana, dengan LDR 
   
   <hr>
   <video width = 500 height = 500 controls>
-    <source src="VID_20190311_142837.mp4" type="video/mp4">
+    <source src="modul4.mp4" type="video/mp4">
   </video>
   
   
