--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                   
                     <div class="card-body"> <a href = "https://l200160091.github.io/modul1.html" class = "btn btn-primary btn-lg"> Modul 1</a> 
                    <a href = "https://l200160091.github.io/modul2.html" class = "btn btn-primary btn-lg"> Modul 2</a> </br></br>
-                   <a href = "https://l200160091.github.io/modul2.html" class = "btn btn-primary btn-lg"> Modul 3</a></div>
+                   <a href = "https://l200160091.github.io/modul3.html" class = "btn btn-primary btn-lg"> Modul 3</a>
+                     <a href = "https://l200160091.github.io/modul4.html" class = "btn btn-primary btn-lg"> Modul 4</a></br></br>
+                     <a href = "https://l200160091.github.io/modul5.html" class = "btn btn-primary btn-lg"> Modul 5</a>
+            </div>
                     <div class="card-footer">2019</div>
                 </div>
       </div>
