--- a/biometric.html
+++ b/biometric.html
@@ -1,20 +1,33 @@
 <html>
 <head>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 <h1>Tugas Biometric Fingerprint Recognition</h1>
 <hr>
 <h3>Dzikrina Hanum Salsabiela</h3>
 <h3>L200160091</h3>
+  
   <hr>
-  <h4> 1. Foto asli cetak sidik jari</h4>
-  <img src = "yes.jpg" style = "width : 300px;height : 300px;">
-  <br>
-  <h4> 2. Hasil dari tahap  poincare</h4>
-  <img src = "yes_poincare.gif" style = "width : 300px;height : 300px;">
+<div class="card">
+  <div class="card-header">Foto Asli</div>
+  <div class="card-body"><img src = "yes.jpg" style = "width : 300px;height : 300px;"></div> 
+</div>
+<div class="card">
+  <div class="card-header">Hasil dari tahap  poincare</div>
+  <div class="card-body"><img src = "yes_poincare.gif" style = "width : 300px;height : 300px;"></div> 
+</div>
   
 
-
+  
 </body>
 </html>
