--- a/biometric.html
+++ b/biometric.html
@@ -18,11 +18,11 @@
 <h3>L200160091</h3>
   
   <hr>
-<div class="card">
+<div class="card" style = "width :300px">
   <div class="card-header">Foto Asli</div>
   <div class="card-body"><img src = "yes.jpg" style = "width : 300px;height : 300px;"></div> 
 </div>
-<div class="card">
+<div class="card" style = "width :300px">
   <div class="card-header">Hasil dari tahap  poincare</div>
   <div class="card-body"><img src = "yes_poincare.gif" style = "width : 300px;height : 300px;"></div> 
 </div>
