--- a/biometric.html
+++ b/biometric.html
@@ -18,13 +18,31 @@
 <h3>L200160091</h3>
   
   <hr>
-<div class="card" style = "width :400px">
-  <div class="card-header">Foto Asli</div>
-  <div class="card-body"><img src = "yes.jpg" style = "width : 300px;height : 300px;"></div> 
-</div>
-<div class="card" style = "width :400px">
-  <div class="card-header">Hasil dari tahap  poincare</div>
-  <div class="card-body"><img src = "yes_poincare.gif" style = "width : 300px;height : 300px;"></div> 
+<div class = "row">
+     <div class= "col-3">
+          <div class="card">
+            <div class="card-header">Foto Asli</div>
+            <div class="card-body"><img src = "uo.jpg" style = "width : 300px;height : 300px;"></div> 
+          </div>    
+     </div>
+     <div class = "col-3">
+          <div class="card">
+            <div class="card-header">Tahap Gabor</div>
+            <div class="card-body"><img src = "uo_enhanced.gif" style = "width : 300px;height : 300px;"></div> 
+          </div>
+      <div>
+       <div class = "col-3">
+          <div class="card">
+            <div class="card-header">Tahap Gabor</div>
+            <div class="card-body"><img src = "uo_enhanced_thinned.gif" style = "width : 300px;height : 300px;"></div> 
+          </div>
+      <div>
+       <div class = "col-3">
+          <div class="card">
+            <div class="card-header">Tahap Thining</div>
+            <div class="card-body"><img src = "uo_enhanced_thinned_minutiae.gif" style = "width : 300px;height : 300px;"></div> 
+          </div>
+      <div>
 </div>
   
 
