--- a/biometric.html
+++ b/biometric.html
@@ -19,27 +19,27 @@
   
   <hr>
 <div class = "row">
-     <div class= "col-3">
+     <div class= "col-3" style = "width:300px;">
           <div class="card">
             <div class="card-header">Foto Asli</div>
             <div class="card-body"><img src = "uo.jpg" style = "width : 250px;height : 250px;"></div> 
           </div>    
      </div>
-     <div class = "col-3">
-          <div class="card">
+     <div class = "col-3" >
+          <div class="card" style = "width:300px;">
             <div class="card-header">Tahap Gabor</div>
             <div class="card-body"><img src = "uo_enhanced.gif" style = "width : 250px;height : 250px;"></div> 
           </div>
       <div>
        <div class = "col-3">
-          <div class="card">
-            <div class="card-header">Tahap Gabor</div>
+          <div class="card" style = "width:300px;">
+            <div class="card-header">Tahap Thiningr</div>
             <div class="card-body"><img src = "uo_enhanced_thinned.gif" style = "width : 250px;height : 250px;"></div> 
           </div>
       <div>
        <div class = "col-3">
-          <div class="card">
-            <div class="card-header">Tahap Thining</div>
+          <div class="card" style = "width:300px;">
+            <div class="card-header">Tahap Minutiae</div>
             <div class="card-body"><img src = "uo_enhanced_thinned_minutiae.gif" style = "width : 250px;height : 250px;"></div> 
           </div>
       <div>
