--- a/biometric.html
+++ b/biometric.html
@@ -18,6 +18,7 @@
 <h3>L200160091</h3>
   
   <hr>
+<div class = "container">
 <div class = "row">
      <div class= "col-3" style = "width:300px;">
           <div class="card">
@@ -43,6 +44,7 @@
             <div class="card-body"><img src = "uo_enhanced_thinned_minutiae.gif" style = "width : 250px;height : 250px;"></div> 
           </div>
       <div>
+</div>
 </div>
   
 
