--- a/biometric.html
+++ b/biometric.html
@@ -21,27 +21,27 @@
 <div class = "container">
 <div class = "row">
      <div class= "col-">
-          <div class="card">
+          <div class="card" style = "width:250px;">
             <div class="card-header">Foto Asli</div>
-            <div class="card-body"><img src = "uo.jpg" style = "width : 250px;height : 250px;"></div> 
+            <div class="card-body"><img src = "uo.jpg" style = "width : 200px;height : 200px;"></div> 
           </div>    
      </div>
      <div class = "col-" >
-          <div class="card" >
+          <div class="card"  "width:250px;" >
             <div class="card-header">Tahap Gabor</div>
-            <div class="card-body"><img src = "uo_enhanced.gif" style = "width : 250px;height : 250px;"></div> 
+            <div class="card-body"><img src = "uo_enhanced.gif" style = "width : 200px;height : 200px;"></div> 
           </div>
       <div>
        <div class = "col-">
-          <div class="card">
+          <div class="card"  "width:250px;">
             <div class="card-header">Tahap Thining</div>
-            <div class="card-body"><img src = "uo_enhanced_thinned.gif" style = "width : 250px;height : 250px;"></div> 
+            <div class="card-body"><img src = "uo_enhanced_thinned.gif" style = "width : 200px;height : 200px;"></div> 
           </div>
       <div>
        <div class = "col-">
-          <div class="card">
+          <div class="card"  "width:250px;">
             <div class="card-header">Tahap Minutiae</div>
-            <div class="card-body"><img src = "uo_enhanced_thinned_minutiae.gif" style = "width : 250px;height : 250px;"></div> 
+            <div class="card-body"><img src = "uo_enhanced_thinned_minutiae.gif" style = "width : 200px;height : 200px;"></div> 
           </div>
       <div>
 </div>
