--- a/biometric.html
+++ b/biometric.html
@@ -1,15 +1,10 @@
 <html>
 <head>
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 <h1>Tugas Biometric Fingerprint Recognition</h1>
@@ -20,23 +15,29 @@
   <hr>
 <div class = "container">
 <div class = "row">
-     <div class= "col-">
-          <div class="card" style = "width:250px;">
+     <div class= "col-sm-3">
+          <div class="card">
             <div class="card-header">Foto Asli</div>
             <div class="card-body"><img src = "uo.jpg" style = "width : 200px;height : 200px;"></div> 
           </div>    
      </div>
-     <div class = "col-" >
-          <div class="card"  "width:250px;" >
+     <div class = "col-sm-3" >
+          <div class="card" >
             <div class="card-header">Tahap Gabor</div>
             <div class="card-body"><img src = "uo_enhanced.gif" style = "width : 200px;height : 200px;"></div> 
           </div>
       <div>
-       <div class= "col-">
-            <h1>ok</h1>  
-     </div>
-     <div class = "col-" >
-          <h1>ok</h1>  
+     <div class = "col-sm-3" >
+          <div class="card"  >
+            <div class="card-header">Tahap Gabor</div>
+            <div class="card-body"><img src = "uo_enhanced.gif" style = "width : 200px;height : 200px;"></div> 
+          </div>
+      <div>
+      <div class = "col-sm-3" >
+          <div class="card">
+            <div class="card-header">Tahap Gabor</div>
+            <div class="card-body"><img src = "uo_enhanced.gif" style = "width : 200px;height : 200px;"></div> 
+          </div>
       <div>
       
        
