--- a/biometric.html
+++ b/biometric.html
@@ -26,7 +26,7 @@
             <div class="card-header">Tahap Gabor</div>
             <div class="card-body"><img src = "uo_enhanced.gif" style = "width : 200px;height : 200px;"></div> 
           </div>
-      <div>
+      </div>
      <div class = "col-sm-3" >
           <div class="card"  >
             <div class="card-header">Tahap Gabor</div>
