--- a/biometric.html
+++ b/biometric.html
@@ -7,13 +7,16 @@
 
 </head>
 <body>
-<h1>Tugas Biometric Fingerprint Recognition</h1>
-<hr>
-<h3>Dzikrina Hanum Salsabiela</h3>
-<h3>L200160091</h3>
-  
-  <hr>
-<div class = "container">
+ <div class="jumbotron jumbotron-fluid bg-danger">
+  <div class="container">
+    <h1>Tugas Biometric Fingerprint Recognition</h1>
+    <hr>
+    <h3>Dzikrina Hanum Salsabiela</h3>
+    <h3>L200160091</h3>
+   
+  </div>
+</div>
+<div class = "container bg-dark">
 <div class = "row">
      <div class= "col-sm-3">
           <div class="card">
@@ -30,13 +33,13 @@
      <div class = "col-sm-3" >
           <div class="card"  >
             <div class="card-header">Tahap Gabor</div>
-            <div class="card-body"><img src = "uo_enhanced.gif" style = "width : 200px;height : 200px;"></div> 
+            <div class="card-body"><img src = "uo_enhanced_thinned.gif" style = "width : 200px;height : 200px;"></div> 
           </div>
       </div>
       <div class = "col-sm-3" >
           <div class="card">
             <div class="card-header">Tahap Gabor</div>
-            <div class="card-body"><img src = "uo_enhanced.gif" style = "width : 200px;height : 200px;"></div> 
+            <div class="card-body"><img src = "uo_enhanced_thinned_minutiae.gif" style = "width : 200px;height : 200px;"></div> 
           </div>
       </div>
       
