--- a/biometric.html
+++ b/biometric.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
- <div class="jumbotron jumbotron-fluid bg-danger">
+ <div class="jumbotron jumbotron-fluid bg-info">
   <div class="container">
     <h1>Tugas Biometric Fingerprint Recognition</h1>
     <hr>
@@ -16,7 +16,8 @@
    
   </div>
 </div>
-<div class = "container bg-dark">
+<div class = "bg-dark">
+<div class = "container">
 <div class = "row">
      <div class= "col-sm-3">
           <div class="card">
@@ -46,6 +47,7 @@
        
 </div>
 </div>
+ </div>
   
 
   
