--- a/biometric.html
+++ b/biometric.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
- <div class="jumbotron jumbotron-fluid bg-info">
+ <div class="jumbotron bg-info text-white">
   <div class="container">
     <h1>Tugas Biometric Fingerprint Recognition</h1>
     <hr>
@@ -16,7 +16,7 @@
    
   </div>
 </div>
-<div class = "bg-dark">
+<div class = "bg-dark" style= "padding-top : 50px;">
 <div class = "container">
 <div class = "row">
      <div class= "col-sm-3">
