--- a/biometric.html
+++ b/biometric.html
@@ -46,6 +46,23 @@
       
        
 </div>
+ <h4> Tahap Gabor </h4>
+ <p> Merupakan tahap filtering dengan menggunakan algoritma gabor. Pada tahap ini sidik jari akan dipertegas garisnya seperti pada gambar</br>.
+ Namun pada gambar di atas hasil nya tidak ter-filter sempurna karena kualitas cetakan sidik jari dan foto kurang begitu bagus</br>
+ sehingga ada bagian sidik jari yang garisnya terputus.</p>
+ <h4> Tahap Thinning </h4>
+ <p>Pada tahap thining garis-garis pada gambar hasil tahap gabor di tipiskan untu keperluan tahap selanjutnya yaitu tahap minutiae.</p>
+ <h4> Tahap Minutiae</h4>
+ <p> Tahap minutiae merupakan tahap untuk menentukan ridge ending dan ridge bifurcations. Ditahap minutiae inilah akan dihasilkan pola </br>
+yang memberikan perbedaan antara satu sidik jari dengan sidik jari lainya<. Hasil tahap minutiae bisa dilihat pada gambar diatas/p>
+ 
+ <h3> Kekurangan pada percobaan</h3>
+ <p> - Performa program yang terlalu lama dalam menyelesaikan eksekusi </br>
+- Program tidak bekerja dengan optimal pada foto sidik jari yang kurang bagus
+</p>
+
+
+ 
 </div>
  </div>
   
