--- a/biometric.html
+++ b/biometric.html
@@ -4,6 +4,18 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+ <style>
+  h3{
+  color : white;
+  }
+  h4{
+  color : white;
+  }
+  p {
+  color : white;
+  }
+  
+ </style>
 
 </head>
 <body>
@@ -47,14 +59,14 @@
        
 </div>
  <h4> Tahap Gabor </h4>
- <p> Merupakan tahap filtering dengan menggunakan algoritma gabor. Pada tahap ini sidik jari akan dipertegas garisnya seperti pada gambar</br>.
+ <p> Merupakan tahap filtering dengan menggunakan algoritma gabor. Pada tahap ini sidik jari akan dipertegas garisnya seperti pada gambar
  Namun pada gambar di atas hasil nya tidak ter-filter sempurna karena kualitas cetakan sidik jari dan foto kurang begitu bagus</br>
  sehingga ada bagian sidik jari yang garisnya terputus.</p>
  <h4> Tahap Thinning </h4>
  <p>Pada tahap thining garis-garis pada gambar hasil tahap gabor di tipiskan untu keperluan tahap selanjutnya yaitu tahap minutiae.</p>
  <h4> Tahap Minutiae</h4>
- <p> Tahap minutiae merupakan tahap untuk menentukan ridge ending dan ridge bifurcations. Ditahap minutiae inilah akan dihasilkan pola </br>
-yang memberikan perbedaan antara satu sidik jari dengan sidik jari lainya<. Hasil tahap minutiae bisa dilihat pada gambar diatas/p>
+ <p> Tahap minutiae merupakan tahap untuk menentukan ridge ending dan ridge bifurcations. Ditahap minutiae inilah akan dihasilkan pola 
+yang memberikan perbedaan antara satu sidik jari dengan sidik jari lainya<. Hasil tahap minutiae bisa dilihat pada gambar diatas</p>
  
  <h3> Kekurangan pada percobaan</h3>
  <p> - Performa program yang terlalu lama dalam menyelesaikan eksekusi </br>
