--- a/biometric.html
+++ b/biometric.html
@@ -45,13 +45,13 @@
       </div>
      <div class = "col-sm-3" >
           <div class="card"  >
-            <div class="card-header">Tahap Gabor</div>
+            <div class="card-header">Tahap Thining</div>
             <div class="card-body"><img src = "uo_enhanced_thinned.gif" style = "width : 200px;height : 200px;"></div> 
           </div>
       </div>
       <div class = "col-sm-3" >
           <div class="card">
-            <div class="card-header">Tahap Gabor</div>
+            <div class="card-header">Tahap minutiae</div>
             <div class="card-body"><img src = "uo_enhanced_thinned_minutiae.gif" style = "width : 200px;height : 200px;"></div> 
           </div>
       </div>
@@ -60,8 +60,7 @@
 </div>
  <h4> Tahap Gabor </h4>
  <p> Merupakan tahap filtering dengan menggunakan algoritma gabor. Pada tahap ini sidik jari akan dipertegas garisnya seperti pada gambar
- Namun pada gambar di atas hasil nya tidak ter-filter sempurna karena kualitas cetakan sidik jari dan foto kurang begitu bagus</br>
- sehingga ada bagian sidik jari yang garisnya terputus.</p>
+ Namun pada gambar di atas hasil nya tidak ter-filter sempurna karena kualitas cetakan sidik jari dan foto kurang begitu bagus sehingga ada bagian sidik jari yang garisnya terputus.</p>
  <h4> Tahap Thinning </h4>
  <p>Pada tahap thining garis-garis pada gambar hasil tahap gabor di tipiskan untu keperluan tahap selanjutnya yaitu tahap minutiae.</p>
  <h4> Tahap Minutiae</h4>
