--- a/biometric.html
+++ b/biometric.html
@@ -38,8 +38,8 @@
           </div>    
      </div>
      <div class = "col-sm-3" >
-          <div class="card" >
-            <div class="card-header" style = "width:300px;">Tahap Gabor</div>
+          <div class="card" style = "width:300px;" >
+            <div class="card-header">Tahap Gabor</div>
             <div class="card-body"><img src = "uo_enhanced.gif" style = "width : 250px;height : 250px;"></div> 
           </div>
       </div>
