--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
       <hr>
         <div class = "container" style = "width : 1000px;">
           <div class = "row" >
-             <div class = "col">
+             <div class = "col-4">
                <div class="card" style="width:400px">
                     <div class="card-header">Pemrograman mobile</div>
-                    <div class="card-body"><a href= "https://l200160091.github.io/android/" class = "btn btn-primary btn-lg">Android Volley</a></div> 
+                    <div class="card-body"><a href= "https://github.com/L200160091/L200160091.github.io/tree/master/android" class = "btn btn-primary btn-lg">Android Volley</a></div> 
                     <div class="card-footer">2019</div>
                 </div>
             </div>
-                <div class = "col">
+                <div class = "col-4">
                <div class="card" style="width:400px">
                     <div class="card-header">BIOMETRIC</div>
                     <div class="card-body"><a href= "https://l200160091.github.io/biometric.html" class = "btn btn-primary btn-lg">Tugas Biometric</a></div> 
                     <div class="card-footer">2019</div>
                 </div>
             </div>
-            <div class = "col">
+            <div class = "col-4">
                 <div class="card" style="width:400px">
                     <div class="card-header">PRAKTIKUM SISTEM EMBEDDED</div>
                   
