--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                    <a href = "https://l200160091.github.io/modul3.html" class = "btn btn-primary btn-lg"> Modul 3</a>
                      <a href = "https://l200160091.github.io/modul4.html" class = "btn btn-primary btn-lg"> Modul 4</a></br></br>
                      <a href = "https://l200160091.github.io/modul5.html" class = "btn btn-primary btn-lg"> Modul 5</a>
+                     <a href = "https://l200160091.github.io/uas.html" class = "btn btn-primary btn-lg">UAS praktikum sistem embedded</a>
             </div>
                     <div class="card-footer">2019</div>
                 </div>
