--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="card-header">PRAKTIKUM SISTEM EMBEDDED</div>
                   
                     <div class="card-body"> 
-                      <a href = "https://l200160091.github.io/rpi.html" class = "btn btn-primary btn-lg">UAS praktikum</a>
+                      <a href = "https://l200160091.github.io/rpi.html" class = "btn btn-primary btn-lg">UAS praktikum sistem embedded</a></br>
                       <a href = "https://l200160091.github.io/modul1.html" class = "btn btn-primary btn-lg"> Modul 1</a> 
                    <a href = "https://l200160091.github.io/modul2.html" class = "btn btn-primary btn-lg"> Modul 2</a> </br></br>
                    <a href = "https://l200160091.github.io/modul3.html" class = "btn btn-primary btn-lg"> Modul 3</a>
