--- a/rpi.html
+++ b/rpi.html
@@ -15,8 +15,8 @@
 Membuat program raspberry pi dengan menggunakan sensor ultrasonik
 </p>
 <h3>dokumentasi foto dan video</h3>
-<img src = "IMG_2870.JPG style = "height:300 ;width:300;> &nbsp <img src = "IMG_2873.JPG style = "height:300 ;width:300;> 
-&nbsp   <img src = "IMG_2875.JPG style = "height:300 ;width:300;> &nbsp   <img src = "IMG_2876.JPG style = "height:300 ;width:300;> 
+<img src = "IMG_2870.JPG" style = "height:300 ;width:300;> &nbsp <img src = "IMG_2873.JPG" style = "height:300 ;width:300;> 
+&nbsp   <img src = "IMG_2875.JPG" style = "height:300 ;width:300;> &nbsp   <img src = "IMG_2876.JPG" style = "height:300 ;width:300;> 
 <hr>
   <video width = 500 height = 500 controls>
     <source src="videonya.mov" type="video/mov">
@@ -24,7 +24,7 @@ Membuat program raspberry pi dengan menggunakan sensor ultrasonik
   
   
   <h4>Kode Program</h4>
- <p>
+ <code>
 import RPi.GPIO as GPIO<br>
 import time<br>
 GPIO.setmode(GPIO.BCM)<br>
@@ -73,7 +73,7 @@ if __name__ == '__main__':<br>
         print("Measurement stopped by User")<br>
         GPIO.cleanup()
     <br>
-  </p>
+  </code>
   
   
 
