--- a/rpi.html
+++ b/rpi.html
@@ -4,7 +4,7 @@
   <p><b> NAMA : DZIKRINA HANUM SALSABIELA</b></p>
   <p><b> NIM : L200160091</p></b><hr>
   <p> <b>Peralatan yang diperlukan :</b></br>
-1. Board arduino/br>
+1. Board arduino</br>
 2. Resistor 1 Kohm dan 2.2 KOhm</br>
 3. Ultrasonic sensor</br>
 4. Kabel jumper</br>
@@ -15,8 +15,8 @@
 Membuat program raspberry pi dengan menggunakan sensor ultrasonik
 </p>
 <h3>dokumentasi foto dan video</h3>
-<img src = "IMG_2870.JPG" style = "height:300 ;width:300;> &nbsp <img src = "IMG_2873.JPG" style = "height:300 ;width:300;> 
-&nbsp   <img src = "IMG_2875.JPG" style = "height:300 ;width:300;> &nbsp   <img src = "IMG_2876.JPG" style = "height:300 ;width:300;> 
+<img src = "IMG_2870.JPG" style = "height:300 ;width:300;"> &nbsp <img src = "IMG_2873.JPG" style = "height:300 ;width:300;"> 
+&nbsp   <img src = "IMG_2875.JPG" style = "height:300 ;width:300;"> &nbsp   <img src = "IMG_2876.JPG" style = "height:300 ;width:300;"> 
 <hr>
   <video width = 500 height = 500 controls>
     <source src="videonya.mov" type="video/mov">
