--- a/rpi.html
+++ b/rpi.html
@@ -15,7 +15,7 @@
 Membuat program raspberry pi dengan menggunakan sensor ultrasonik
 </p>
 <h3>dokumentasi foto dan video</h3>
-<img src = "IMG_2870.JPG" style = "height:300 ;width:300;"> &nbsp <img src = "IMG_2873.JPG" style = "height:300 ;width:300;"> 
+ &nbsp <img src = "IMG_2873.JPG" style = "height:300 ;width:300;"> 
 &nbsp   <img src = "IMG_2875.JPG" style = "height:300 ;width:300;"> &nbsp   <img src = "IMG_2876.JPG" style = "height:300 ;width:300;"> 
 <hr>
   <video width = 500 height = 500 controls>
