--- a/rpi.html
+++ b/rpi.html
@@ -19,7 +19,7 @@ Membuat program raspberry pi dengan menggunakan sensor ultrasonik
 &nbsp   <img src = "IMG_2875.JPG" style = "height:300 ;width:300;"> &nbsp   <img src = "IMG_2876.JPG" style = "height:300 ;width:300;"> 
 <hr>
   <video width = 500 height = 500 controls>
-    <source src="videonya.mov" type="video/mov">
+    <source src="videoo.mp4" type="video/mp4">
   </video>
   
   
