--- a/modul3.html
+++ b/modul3.html
@@ -1,11 +1,20 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  </head>
 <body>
+<div class = "jumbotron bg-info text-white">
 <h1 style = "text-align : center;"> LAPORAN PRAKTIKUM SISTEM EMBEDDED</h1>
   <h2 style = "text-align : center;" >MODUL 3</h2>
 <h3 style = "text-align : center;"> DISPLAY 7-SEGMENT</h3><hr>
   <p><b> NAMA : DZIKRINA HANUM SALSABIELA</b></p>
   <p><b> NIM : L200160091</p></b><hr>
   <p> <b>Peralatan yang diperlukan :</b></br>
+</div>
+<div class= "bg-dark">
 1. Arduino Uno Starter Kit</br>
 2. 1 buah 7-segment</br>
 3. 1 buah Lampu Led</br>
@@ -66,9 +75,10 @@ void loop() {</br>
     PORTD = val[9];</br>
     }</br>
 
+
 }</br>
   </p>
-  
+</div>
   
 
 
