--- a/modul3.html
+++ b/modul3.html
@@ -5,16 +5,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </head>
-<body>
+<body class="bg-dark">
 <div class = "jumbotron bg-info text-white">
-<h1 style = "text-align : center;"> LAPORAN PRAKTIKUM SISTEM EMBEDDED</h1>
-  <h2 style = "text-align : center;" >MODUL 3</h2>
+<h2 style = "text-align : center;"> LAPORAN PRAKTIKUM SISTEM EMBEDDED</h2>
+  <h3 style = "text-align : center;" >MODUL 3</h3>
 <h3 style = "text-align : center;"> DISPLAY 7-SEGMENT</h3><hr>
   <p><b> NAMA : DZIKRINA HANUM SALSABIELA</b></p>
   <p><b> NIM : L200160091</p></b><hr>
-  <p> <b>Peralatan yang diperlukan :</b></br>
+ 
 </div>
-<div class= "bg-dark">
+<div class= "tetx-white">
+<p> <b>Peralatan yang diperlukan :</b></br>
 1. Arduino Uno Starter Kit</br>
 2. 1 buah 7-segment</br>
 3. 1 buah Lampu Led</br>
