--- a/modul3.html
+++ b/modul3.html
@@ -5,16 +5,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </head>
-<body class="bg-dark">
+<body>
 <div class = "jumbotron bg-info text-white">
-<h2 style = "text-align : center;"> LAPORAN PRAKTIKUM SISTEM EMBEDDED</h2>
-  <h3 style = "text-align : center;" >MODUL 3</h3>
+  <div class = "container"
+<h2> LAPORAN PRAKTIKUM SISTEM EMBEDDED</h2>
+  <h3>MODUL 3</h3>
 <h3 style = "text-align : center;"> DISPLAY 7-SEGMENT</h3><hr>
   <p><b> NAMA : DZIKRINA HANUM SALSABIELA</b></p>
   <p><b> NIM : L200160091</p></b><hr>
- 
+  </div>
 </div>
-<div class= "tetx-white">
+<div class= "bg-dark tetx-white">
 <p> <b>Peralatan yang diperlukan :</b></br>
 1. Arduino Uno Starter Kit</br>
 2. 1 buah 7-segment</br>
