--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class = "col-4">
                <div class="card" style="width:400px">
                     <div class="card-header">BIOMETRIC</div>
-                    <div class="card-body"><a href= "https://l200160091.github.io/biometric.html" class = "btn btn-primary btn-lg">Tugas Biometric</a></div> 
+                    <div class="card-body"><a href= "https://dzikrina.github.io/biometric.html" class = "btn btn-primary btn-lg">Tugas Biometric</a></div> 
                     <div class="card-footer">2019</div>
                 </div>
             </div>
@@ -32,12 +32,12 @@
                     <div class="card-header">PRAKTIKUM SISTEM EMBEDDED</div>
                   
                     <div class="card-body"> 
-                      <a href = "https://l200160091.github.io/rpi.html" class = "btn btn-primary btn-lg">UAS praktikum sistem embedded</a></br></br>
-                      <a href = "https://l200160091.github.io/modul1.html" class = "btn btn-primary btn-lg"> Modul 1</a> 
-                   <a href = "https://l200160091.github.io/modul2.html" class = "btn btn-primary btn-lg"> Modul 2</a> </br></br>
-                   <a href = "https://l200160091.github.io/modul3.html" class = "btn btn-primary btn-lg"> Modul 3</a>
-                     <a href = "https://l200160091.github.io/modul4.html" class = "btn btn-primary btn-lg"> Modul 4</a></br></br>
-                     <a href = "https://l200160091.github.io/modul5.html" class = "btn btn-primary btn-lg"> Modul 5</a>
+                      <a href = "https://dzikrina.github.io/rpi.html" class = "btn btn-primary btn-lg">UAS praktikum sistem embedded</a></br></br>
+                      <a href = "https://dzikrina.github.io/modul1.html" class = "btn btn-primary btn-lg"> Modul 1</a> 
+                   <a href = "https://dzikrina.github.io/modul2.html" class = "btn btn-primary btn-lg"> Modul 2</a> </br></br>
+                   <a href = "https://dzikrina.github.io/modul3.html" class = "btn btn-primary btn-lg"> Modul 3</a>
+                     <a href = "https://dzikrina.github.io/modul4.html" class = "btn btn-primary btn-lg"> Modul 4</a></br></br>
+                     <a href = "https://dzikrina.github.io/modul5.html" class = "btn btn-primary btn-lg"> Modul 5</a>
                      
             </div>
                     <div class="card-footer">2019</div>
